new way to launch: long polling

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,20 @@
-# Telegram
-BOT_TOKEN = 
-ADMIN_ID =
-LOG_CHANNEL_ID = -100
-LOG_LEVEL = "INFO"
-WEBHOOK_BASE_URL= 
-WEBHOOK_PATH = /webhook
-WEBHOOK_SECRET = 
-WEBHOOK_HOST = "0.0.0.0"
+IS_POLLING = 1
 
+# Telegram
+BOT_TOKEN =
+ADMIN_ID = 
+LOG_CHANNEL_ID = -100
+LOG_LEVEL =
+
+AI_BASE_URL =
+AI_MODEL =
+OPENROUTER_API_KEY =
+AI_CONCURRENT_LIMIT =
+
+WEBHOOK_BASE_URL = 
+WEBHOOK_PATH = 
+WEBHOOK_SECRET = 
+WEBHOOK_HOST = 
 
 # PostgreSQL (данные взять из docker-compose.yml)
 DATABASE_URL=postgresql+asyncpg://<user>:<password>@<name-service>:5432/vova_bot_db
